--- a/about.html
+++ b/about.html
@@ -364,7 +364,7 @@
                         <p>#Web Developer.</p>
                     </div>
                     <div class="team-member">
-                        <img src="#" alt="D.Satya">
+                        <img src="satya.jpeg" alt="D.Satya">
                         <h3>D.Satya</h3>
                         <p>Student Of SRKR Engineering.</p>
                         <p>#Web Developer.</p>
