--- a/form.html
+++ b/form.html
@@ -259,7 +259,7 @@ button[type="submit"]:hover::before {
 </button>
     <div class="header">
         <h1>Save Lives, Donate Blood</h1>
-        <p>Your donation can save up to 3 lives. Join our community of heroes making a difference every day.</p>
+        <p>Your donation can save up to 3 lives. Join our community of heros making a difference every day.</p>
     </div>
 
     <!-- Button to Show Form -->
@@ -317,10 +317,10 @@ button[type="submit"]:hover::before {
     </div>
     
     <div class="benefits-container">
-        <div class="benefit-card">
+        <!-- <div class="benefit-card">
             <h3>Health Check</h3>
             <p>Free mini health check-up with every donation.</p>
-        </div>
+        </div> -->
         <div class="benefit-card">
             <h3>Save Lives</h3>
             <p>One donation can help save up to three lives.</p>
