backend server change

--- a/form.html
+++ b/form.html
@@ -604,7 +604,7 @@ button[type="submit"]:hover::before {
             }
 
             // First check if a donor with the same mobile number already exists
-            fetch(`https://blood-backend-1-u7vl.onrender.com/donors/check/${number}`)
+            fetch(`https://blood-backend-production-c41c.up.railway.app/donors/check/${number}`)
                 . then(response => response.json())
                 .then(data => {
                     if (data.exists) {
@@ -616,7 +616,7 @@ button[type="submit"]:hover::before {
                     const newDonor = { name, age, number, bloodType, location };
 
                     // Send donor data to the backend
-                    fetch('https://blood-backend-1-u7vl.onrender.com/donors', {
+                    fetch('https://blood-backend-production-c41c.up.railway.app/donors', {
                         method: 'POST',
                         headers: { 'Content-Type': 'application/json' },
                         body: JSON.stringify(newDonor)
@@ -647,7 +647,7 @@ button[type="submit"]:hover::before {
                     // Fallback to the original code if the check endpoint is not available
                     const newDonor = { name, age, number, bloodType, location };
                     
-                    fetch('https://blood-backend-1-u7vl.onrender.com/donors', {
+                    fetch('https://blood-backend-production-c41c.up.railway.app/donors', {
                         method: 'POST',
                         headers: { 'Content-Type': 'application/json' },
                         body: JSON.stringify(newDonor)
