in contact change location

--- a/blood information.html
+++ b/blood information.html
@@ -384,8 +384,8 @@
                     <a href="#" class="social-icon"><i class="fab fa-twitter"></i></a>
                     <a href="https://www.instagram.com/blood_heros_srkr?igsh=MWF3OGFlamRndG9lMg==" class="social-icon"><i class="fab fa-instagram"></i></a>
                 </div>
-                <p>&copy; 2025 Blood Heroes. All rights reserved.</p>
-                <p>Contact us:BloodHeroes@gmail.com</p>
+                <p>&copy; 2025 Blood Heros. All rights reserved.</p>
+                <p>Contact us:BloodHeros@gmail.com</p>
             </div>
         </div>
     </footer>
