title change into blood bro's

--- a/FAQ.html
+++ b/FAQ.html
@@ -3,7 +3,7 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Frequently Asked Questions - Blood Heroes</title>
+    <title>Frequently Asked Questions - Blood Bro's</title>
     <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.0.0/css/all.min.css">
     <style>
         :root {
@@ -429,7 +429,7 @@
             <div class="header-content">
                 <div class="logo">
                     <i class="fas fa-heartbeat"></i>
-                    <a href="home.html"><h1>Blood Heroes</h1></a>
+                    <a href="home.html"><h1>Blood Bro's</h1></a>
                 </div>
                 <a href="form.html">
                     <button class="donate-button">
@@ -664,8 +664,8 @@
                     <a href="#" class="social-icon"><i class="fab fa-twitter"></i></a>
                     <a href="https://www.instagram.com/blood_heros_srkr?igsh=MWF3OGFlamRndG9lMg==" class="social-icon"><i class="fab fa-instagram"></i></a>
                 </div>
-                <p>&copy; 2025 Blood Heros. All rights reserved.</p>
-                <p>Contact us: BloodHeros@gmail.com</p>
+                <p>&copy; 2025 Blood Bro's. All rights reserved.</p>
+                <p>Contact us: BloodBros@gmail.com</p>
             </div>
         </div>
     </footer>
