--- a/about.html
+++ b/about.html
@@ -3,7 +3,7 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>About Us - Blood Heroes</title>
+    <title>About Us - Blood Bro's</title>
     <link rel="icon" href="data:image/svg+xml,<svg xmlns='http://www.w3.org/2000/svg' viewBox='0 0 100 100'><text y='.9em' font-size='90'>🩸</text></svg>">
     <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.0.0/css/all.min.css">
     <style>
@@ -316,7 +316,7 @@
             <div class="header-content">
                 <div class="logo">
                     <i class="fas fa-heartbeat"></i>
-                    <a href="home.html"><h1>Blood Heros</h1></a>
+                    <a href="home.html"><h1>Blood Bro's</h1></a>
                 </div>
                 <a href="form.html">
                     <button class="donate-button">
@@ -330,8 +330,8 @@
 
     <div class="container">
         <div class="about-section">
-            <h2>About Blood Heros</h2>
-            <p>Blood Heroes was founded in 2025 with a simple mission: to bridge the gap between blood donors and those in need. In emergency situations, finding the right blood type quickly can mean the difference between life and death. Our platform connects willing donors with patients requiring blood transfusions, creating a community of heroes who save lives every day.</p>
+            <h2>About Blood Bro's</h2>
+            <p>Blood Bro's was founded in 2025 with a simple mission: to bridge the gap between blood donors and those in need. In emergency situations, finding the right blood type quickly can mean the difference between life and death. Our platform connects willing donors with patients requiring blood transfusions, creating a community of hero's who save lives every day.</p>
             
             <p>What began as a small community initiative has grown into a nationwide network of donors ready to help at a moment's notice. Blood Heroes is more than just a donation platform—it's a movement towards a more compassionate and responsive healthcare system.</p>
 
@@ -401,8 +401,8 @@
                     <a href="#" class="social-icon"><i class="fab fa-twitter"></i></a>
                     <a href="https://www.instagram.com/blood_heros_srkr?igsh=MWF3OGFlamRndG9lMg==" class="social-icon"><i class="fab fa-instagram"></i></a>
                 </div>
-                <p>&copy; 2025 Blood Heros. All rights reserved.</p>
-                <p>Contact us: BloodHeros@gmail.com</p>
+                <p>&copy; 2025 Blood Bro's. All rights reserved.</p>
+                <p>Contact us: BloodBros@gmail.com</p>
             </div>
         </div>
     </footer>
