--- a/blood information.html
+++ b/blood information.html
@@ -3,7 +3,7 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Blood Heros - Smart Assistant</title>
+    <title>Blood Bro's - Smart Assistant</title>
     <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.0.0/css/all.min.css">
     <link rel="icon" href="data:image/svg+xml,<svg xmlns='http://www.w3.org/2000/svg' viewBox='0 0 100 100'><text y='.9em' font-size='90'>🩸</text></svg>">
     <script src="https://cdnjs.cloudflare.com/ajax/libs/chart.js/3.9.1/chart.min.js"></script>
@@ -288,7 +288,7 @@
             <div class="header-content">
                 <div class="logo">
                     <i class="fas fa-heartbeat"></i>
-                   <a href="home.html"><h1>Blood Heros</h1></a> 
+                   <a href="home.html"><h1>Blood Bro's</h1></a> 
                 </div>
                 <div class="nav-buttons">
                     <a href="home.html" class="nav-button">
@@ -384,8 +384,8 @@
                     <a href="#" class="social-icon"><i class="fab fa-twitter"></i></a>
                     <a href="https://www.instagram.com/blood_heros_srkr?igsh=MWF3OGFlamRndG9lMg==" class="social-icon"><i class="fab fa-instagram"></i></a>
                 </div>
-                <p>&copy; 2025 Blood Heros. All rights reserved.</p>
-                <p>Contact us:BloodHeros@gmail.com</p>
+                <p>&copy; 2025 Blood Bro's. All rights reserved.</p>
+                <p>Contact us:BloodBros@gmail.com</p>
             </div>
         </div>
     </footer>
