--- a/contact.html
+++ b/contact.html
@@ -3,7 +3,7 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Contact Us - Blood Heroes</title>
+    <title>Contact Us - Blood Bro's</title>
     <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.0.0/css/all.min.css">
     <link rel="icon" href="data:image/svg+xml,<svg xmlns='http://www.w3.org/2000/svg' viewBox='0 0 100 100'><text y='.9em' font-size='90'>🩸</text></svg>">
     <style>
@@ -583,7 +583,7 @@
             <div class="header-content">
                 <div class="logo">
                     <i class="fas fa-heartbeat"></i>
-                    <a href="home.html"><h1>Blood Heros</h1></a>
+                    <a href="home.html"><h1>Blood Bro's</h1></a>
                 </div>
                 <a href="form.html">
                     <button class="donate-button">
@@ -602,8 +602,8 @@
         <div class="contact-container">
             <div class="contact-info">
                 <h3>Get In Touch</h3>
-                <p><i class="fas fa-envelope"></i> Email: <a href="mailto:BloodHeroes@gmail.com">BloodHeroes@gmail.com</a></p>
-                <p><i class="fas fa-phone"></i> Phone: +91 83xxxxxx05</p>
+                <p><i class="fas fa-envelope"></i> Email: <a href="mailto:BloodHeroes@gmail.com">BloodBro's@gmail.com</a></p>
+                <p><i class="fas fa-phone"></i> Phone: +91 8367735605</p>
                 <p><i class="fas fa-map-marker-alt"></i> Address: SRKR Engineering College, Bhimavaram, 534204</p>
             </div>
             
@@ -664,8 +664,8 @@
                     <a href="#" class="social-icon"><i class="fab fa-twitter"></i></a>
                     <a href="https://www.instagram.com/blood_heros_srkr?igsh=MWF3OGFlamRndG9lMg==" class="social-icon"><i class="fab fa-instagram"></i></a>
                 </div>
-                <p>&copy; 2025 Blood Heroes. All rights reserved.</p>
-                <p>Contact us: BloodHeroes@gmail.com</p>
+                <p>&copy; 2025 Blood Bro's. All rights reserved.</p>
+                <p>Contact us: BloodBros@gmail.com</p>
             </div>
         </div>
     </footer>
