--- a/Privacy Policy Page.html
+++ b/Privacy Policy Page.html
@@ -617,7 +617,7 @@
                     <a href="index.html">Home</a>
                     <a href="about.html">About Us</a>
                     <a href="faq.html">FAQ</a>
-                    <a href="privacy.html">Privacy Policy</a>
+                    <a href="Privacy Policy Page.html">Privacy Policy</a>
                     <a href="contact.html">Contact</a>
                 </div>
                 <div class="social-icons">
