--- a/loading.html
+++ b/loading.html
@@ -268,7 +268,7 @@
                 // Redirect after fade out animation
                 setTimeout(() => {
                     // Replace with your actual home page URL
-                    window.location.href = '#home'; // Change this to your home page URL
+                    window.location.href = 'home.html'; // Change this to your home page URL
                     
                     // For demonstration, we'll create a simple home page
                     document.body.innerHTML = `
