--- a/form.html
+++ b/form.html
@@ -438,7 +438,7 @@
             handleFormSubmit(event);
             
             // Show success message
-            alert("Thank you for registering as a donor! Our team will contact you soon to schedule your donation.");
+            alert("Thank you for registering as a donor!.");
             
             // Navigate to home.html after 1 second
             setTimeout(() => {
